--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "install": "^0.10.1",
     "lodash": "^4.13.1",
     "moment": "^2.13.0",
     "native-base": "2.1.0-rc.2",
+    "npm": "^5.0.1",
     "react": "16.0.0-alpha.3",
     "react-native": "0.43.2",
     "react-native-animatable": "^1.1.0",
@@ -21,18 +23,20 @@
     "react-native-lightbox": "^0.6.0",
     "react-native-list-popover": "^1.0.5",
     "react-native-modalbox": "^1.3.9",
+    "react-native-permissions": "^0.2.7",
     "react-native-router-flux": "3.37.0",
     "react-native-search-bar": "^3.0.0",
     "react-native-simple-modal": "^4.0.2",
     "react-native-slide-down-panel": "^1.0.6",
     "react-native-swiper": "^1.5.4",
-    "react-native-vector-icons": "^4.0.0",
+    "react-native-vector-icons": "^4.2.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-persist": "^4.4.2",
     "redux-thunk": "^2.2.0",
     "remote-redux-devtools": "^0.5.7",
-    "remote-redux-devtools-on-debugger": "^0.7.0"
+    "remote-redux-devtools-on-debugger": "^0.7.0",
+    "tcomb-form-native": "^0.6.8"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
