--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,13 +87,23 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.bhc"
-        minSdkVersion 16
+        applicationId "com.bch"
+        minSdkVersion 18
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
+        }
+    }
+    signingConfigs {
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE)
+                storePassword MYAPP_RELEASE_STORE_PASSWORD
+                keyAlias MYAPP_RELEASE_KEY_ALIAS
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+            }
         }
     }
     splits {
@@ -108,7 +118,8 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-        }
+            signingConfig signingConfigs.release
+	}
     }
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
@@ -126,8 +137,10 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-permissions')
+    compile project(':react-native-bluetooth-serial')
     compile project(':react-native-vector-icons')
+    compile project(':react-native-permissions')
+    compile project(':react-native-ble-plx')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
