--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BHC",
+  "name": "BCH",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,7 +15,8 @@
     "react": "16.0.0-alpha.3",
     "react-native": "0.43.2",
     "react-native-animatable": "^1.1.0",
-    "react-native-ble-manager": "^5.0.2",
+    "react-native-ble-plx": "^0.5.0",
+    "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-button": "^1.8.2",
     "react-native-easy-grid": "0.1.8",
     "react-native-gifted-chat": "^0.1.3",
